moved bg styles from 'page.scss' to 'utilities.scss'; fixed footer for IE (no border-box capability); fixed header navbar overflow/scrollbar issue

--- a/src/public/sass/helpers/_utilities.scss
+++ b/src/public/sass/helpers/_utilities.scss
@@ -311,6 +311,16 @@
 }
 
 /*-----------------------
+  @BACKGROUNDS
+------------------------*/
+.bg-grey {
+    background-color: $color-grey-light-bg;
+}
+.bg-grey-dark {
+    background-color: $color-grey-dark;
+}
+
+/*-----------------------
   @SHADOWS
 ------------------------*/
 %overlap {
