--- a/src/public/sass/layout/_footer.scss
+++ b/src/public/sass/layout/_footer.scss
@@ -48,6 +48,12 @@
     }
 }
 
+.footer-container {
+    margin: 0 auto;
+    max-width: $page-max-width;
+    width: 100%;
+}
+
 .footer-row {
     margin: 0 auto;
     max-width: $page-max-width;
