--- a/src/public/sass/layout/_page.scss
+++ b/src/public/sass/layout/_page.scss
@@ -1,10 +1,3 @@
-.bg-grey {
-    background-color: $color-grey-light-bg;
-}
-.bg-grey-dark {
-    background-color: $color-grey-dark;
-}
-
 .page {
     background: #fff;
     margin: {
